<resources>
    <string name="app_name">AR Dictionary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="heading_synonym">Similar Words</string>
    <string name="heading_example_sentences">Example Sentences</string>
    <string name="btn_audio">Audio</string>

    <string name="menu_camera">Home</string>
    <string name="menu_words">Word Definition</string>
    <string name="menu_authentication">Sign In</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_notebooks">Notebooks</string>

    <string name="action_notebook_change_name">Change Name</string>
    <string name="action_notebook_delete">Delete Notebook</string>
    <string name="action_word_add_to_notebook">Add To Notebook</string>
    <string name="action_word_move_to_notebook">Move To Notebook</string>
    <string name="action_word_delete">Delete Word</string>

    <string name="btn_register">Register</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="hint_email_exit_text">Email</string>
    <string name="hint_name_exit_text">Name</string>
    <string name="hint_password_exit_text">Password</string>
    <string name="hint_confirm_password_exit_text">Confirm Password</string>

    <string name="text_have_an_account">Already have an account? Sign in</string>
    <string name="text_confirm_logout">Are you sure you want to sign out?</string>

    <string name="camera_prompt">Tap on a word to get the definition</string>
</resources>