<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_camera">

    <fragment
        android:id="@+id/nav_camera"
        android:name="ie.lit.ardictionary.ui.camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/nav_notebooks"
        android:name="ie.lit.ardictionary.ui.notebook.NotebookFragment"
        android:label="@string/menu_notebooks"
        tools:layout="@layout/fragment_notebook"/>
    <fragment
        android:id="@+id/nav_authentication"
        android:name="ie.lit.ardictionary.ui.auth.AuthFragment"
        android:label="@string/menu_authentication"
        tools:layout="@layout/fragment_authentication"/>
    <fragment
        android:id="@+id/nav_sign_out"
        android:name="ie.lit.ardictionary.ui.auth.SignOutFragment"
        android:label="@string/menu_sign_out"
        tools:layout="@layout/fragment_sign_out" />
    <fragment
        android:id="@+id/nav_words"
        android:name="ie.lit.ardictionary.ui.word.WordFragment"
        android:label="@string/menu_words"
        tools:layout="@layout/fragment_search_result" />

</navigation>